update doc and readme

--- a/Documentation/html/index.html
+++ b/Documentation/html/index.html
@@ -74,6 +74,10 @@ $(function() {
 <li>The events can be dispatched without throwing exception even if no listeners are registered</li>
 <li>Extends easily base class Event to add properties suiting your needs</li>
 </ul>
+<h1>Sources</h1>
+<p>(<a href="https://github.com/kevincastejon/cs-event-manager">https://github.com/kevincastejon/cs-event-manager</a>)[<a href="https://github.com/kevincastejon/cs-event-manager">https://github.com/kevincastejon/cs-event-manager</a>]</p>
+<h1>Documentation</h1>
+<p>(<a href="https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html">https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html</a>)[<a href="https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html">https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html</a>]</p>
 <p>Simple usage, without any extends</p>
 <div class="fragment"><div class="line">//Instantiate an EventDispatcher and add a listener</div>
 <div class="line">EventDispatcher ed = new EventDispatcher();</div>
