update readm and doc

--- a/Documentation/html/index.html
+++ b/Documentation/html/index.html
@@ -78,6 +78,7 @@ $(function() {
 <p>(<a href="https://github.com/kevincastejon/cs-event-manager">https://github.com/kevincastejon/cs-event-manager</a>)[<a href="https://github.com/kevincastejon/cs-event-manager">https://github.com/kevincastejon/cs-event-manager</a>]</p>
 <h1>Documentation</h1>
 <p>(<a href="https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html">https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html</a>)[<a href="https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html">https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html</a>]</p>
+<h1>Usages</h1>
 <p>Simple usage, without any extends</p>
 <div class="fragment"><div class="line">//Instantiate an EventDispatcher and add a listener</div>
 <div class="line">EventDispatcher ed = new EventDispatcher();</div>
