update doc and examples

--- a/Documentation/html/classkevincastejon_1_1_event_dispatcher.html
+++ b/Documentation/html/classkevincastejon_1_1_event_dispatcher.html
@@ -163,7 +163,7 @@ Static Public Member Functions</h2></td></tr>
         }
         public int NumberOfElements { get { return (_numberOfElements); } }
         public int MaxElements { get { return (_maxElements); } }
-        public float FillingRatio { get { return (_numberOfElements / _maxElements); } }
+        public float FillingRatio { get { return ((float)_numberOfElements / _maxElements); } }
     }
     public class TesterClass
     {
@@ -186,7 +186,7 @@ Static Public Member Functions</h2></td></tr>
         private void MyCallback(ContainerEvent e)
         {
             //Monitors the events dispatched by the bag
-            Console.WriteLine(e.Name + " - " + e.NumberOfElements + " rice grains on " + e.MaxElements + ". The bag is full at " + e.FillingRatio);
+            Console.WriteLine(e.Name + " - " + e.NumberOfElements + " rice grains on " + e.MaxElements + ". The bag is full at " + e.FillingRatio + "%");
         }
     }
 </pre><p></code></p>
