update and clean

--- a/Documentation/html/index.html
+++ b/Documentation/html/index.html
@@ -75,9 +75,9 @@ $(function() {
 <li>Extends easily base class Event to add properties suiting your needs</li>
 </ul>
 <h1>Sources</h1>
-<p>(<a href="https://github.com/kevincastejon/cs-event-manager">https://github.com/kevincastejon/cs-event-manager</a>)[<a href="https://github.com/kevincastejon/cs-event-manager">https://github.com/kevincastejon/cs-event-manager</a>]</p>
+<p><a href="https://github.com/kevincastejon/cs-event-manager">https://github.com/kevincastejon/cs-event-manager</a></p>
 <h1>Documentation</h1>
-<p>(<a href="https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html">https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html</a>)[<a href="https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html">https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html</a>]</p>
+<p><a href="https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html">https://github.com/kevincastejon/cs-event-manager/tree/master/Documentation/html</a></p>
 <h1>Usages</h1>
 <p>Simple usage, without any extends</p>
 <div class="fragment"><div class="line">//Instantiate an EventDispatcher and add a listener</div>
